--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hola Mundo soy Melvin Candelario Jimmenez</title>
+  <title>Hola Mundo soy Melvin Candelario Jimenez</title>
 </head>
 <body>
   <h1>Hola Mundo desde GitHub!</h1>
